--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="main.css" >
         <title>Girls Who Code 2020</title>
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300;400;500&family=Roboto&family=Sansita+Swashed:wght@300;400&display=swap"
+    rel="stylesheet">    
     <body>
-        <h1>Girls Who Code 2020</h1>
+        <h1><a class="title" href="index.html">Girls Who Code 2020</a></h1>
         <h3>We are awesome</h3>
         <div>
             <img src="GWC_Logo.png">
@@ -12,15 +14,16 @@
                 <p>This is a paragraph </p>
                 <h5>Reasons to join GWC</h5>
                 <ol>
-                    <li>we're cool</li>
-                    <li>we're smart</li>
-                    <li>we're funny</li>
+                    <li>1. we're cool</li>
+                    <li>2. we're smart</li>
+                    <li>3. we're funny</li>
                 </ol>
             </div>
         </div>
         <table>
             <tr>
                 <th>Facilitators</th>
+                <th>Cool Picture</th>
             </tr>
             <tr>
                 <td><a href="riya.html">Riya L.</a></td>
