added natalie's homepage

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <td><a href="ashley.html">Ashley H.</a></td>
                 <td>insert image</td>
             </tr>
+            <tr>
+                <td><a href="natalie.html">Natalie H.</a></td>
+                <td>insert image</td>
+            </tr>
         </table>
         <p>Click on a name to see the facilitator's bio!</p>
     </body>
