Updating index.html's code to match CSS branch.

--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Girls Who Code 2020</title>
-    </head>
-    <body>
-        <h1>Girls Who Code 2020</h1>
-        <h3>We are awesome</h3>
+
+<head>
+    <link rel="stylesheet" href="main.css">
+    <title>Girls Who Code 2020</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300;400;500&family=Roboto&family=Sansita+Swashed:wght@300;400&display=swap"
+        rel="stylesheet">
+
+<body>
+    <h1><a class="title" href="index.html">Girls Who Code 2020</a></h1>
+    <h3>We are awesome</h3>
+    <div>
+        <img src="GWC_Logo.png">
         <div>
-            <img src="GWC_Logo.png">
-            <div>
-                <p>This is a paragraph </p>
-                <h5>Reasons to join GWC</h5>
-                <ol>
-                    <li>we're cool</li>
-                    <li>we're smart</li>
-                    <li>we're funny</li>
-                </ol>
-            </div>
+            <p>This is a paragraph </p>
+            <h5>Reasons to join GWC</h5>
+            <ol>
+                <li>1. we're cool</li>
+                <li>2. we're smart</li>
+                <li>3. we're funny</li>
+            </ol>
         </div>
-        <table>
-            <tr>
-                <th>Facilitators</th>
-            </tr>
-            <tr>
-                <td><a href="riya.html">Riya L.</a></td>
-                <td>insert image</td>
-            </tr>
-            <tr>
-                <td><a href="lexi.html">Lexi M.</a></td>
-                <td>insert image</td>
-            </tr>
-            <tr>
-                <td><a href="ashley.html">Ashley H.</a></td>
-                <td>insert image</td>
-            </tr>
-        </table>
-        <p>Click on a name to see the facilitator's bio!</p>
-    </body>
+    </div>
+    <table>
+        <tr>
+            <th>Facilitators</th>
+            <th>Cool Picture</th>
+        </tr>
+        <tr>
+            <td><a href="riya.html">Riya L.</a></td>
+            <td>insert image</td>
+        </tr>
+        <tr>
+            <td><a href="lexi.html">Lexi M.</a></td>
+            <td>insert image</td>
+        </tr>
+        <tr>
+            <td><a href="ashley.html">Ashley H.</a></td>
+            <td>insert image</td>
+        </tr>
+    </table>
+    <p>Click on a name to see the facilitator's bio!</p>
+</body>
+
 </html>
