Started working on GWC website

--- a/riya.html
+++ b/riya.html
@@ -8,7 +8,7 @@
         <h1>Riya Lengade</h1>
         <h3>Hi! Welcome to my page</h3>
         <div>
-            <img src="riya.JPG">
+            <img src="images/riya.JPG">
         </div>
         <div>
             <ol>
