fixed bubble nav bar

--- a/GWC Website/main.html
+++ b/GWC Website/main.html
@@ -12,15 +12,14 @@
     </head>
 
     <body>
-        <div style="text-align:center">
-            <span class="dot"><p><mark>Home</mark></p></span>
-            <span class="dot"><a href="contact_us.html">About Us</a></span>
-            <span class="dot"><a href="projects.html">Projects</a></span>
-            <span class="dot"><a href="faq_page.html">FAQ</a></span>
-              
+        <div class="bubble_menu">
+          <button class="button" onclick="document.location='main.html'">Home</button>
+          <button class="button" onclick="document.location='about_us.html'">About Us</button>
+          <button class="button" onclick="document.location='projects.html'">Projects</button>
+          <button class="button" onclick="document.location='faq.html'">FAQ</button>
         </div>
 
-        <h1 style="text-align:center">Girls Who Code - Otterbein Chapter</h1>
+        <h1>Girls Who Code - Otterbein Chapter</h1>
 
 <!-- Container for the image gallery -->
 <div class="container">
@@ -88,8 +87,8 @@
         }
     </script>
 
-    <h2 style="text-align:center">Mission Statement</h2>
-    <p style="text-align:center">Our mission is to get more girls into the tech industry through learning more about coding, while having fun!</p>
+    <h2>Mission Statement</h2>
+    <p>Our mission is to get more girls into the tech industry through learning more about coding, while having fun!</p>
 
 
     <footer class="footer" >
