--- a/GWC Website/main.html
+++ b/GWC Website/main.html
@@ -14,9 +14,9 @@
     <body>
         <div class="bubble_menu">
           <button class="button" onclick="document.location='main.html'">Home</button>
-          <button class="button" onclick="document.location='about_us.html'">About Us</button>
+          <button class="button" onclick="document.location='MeetUs.html'">About Us</button>
           <button class="button" onclick="document.location='projects.html'">Projects</button>
-          <button class="button" onclick="document.location='faq.html'">FAQ</button>
+          <button class="button" onclick="document.location='faq_page.html'">FAQ</button>
         </div>
 
         <h1>Girls Who Code - Otterbein Chapter</h1>
