fixes on meetus page and started project page

--- a/GWC Website/MeetUs.html
+++ b/GWC Website/MeetUs.html
@@ -3,6 +3,8 @@
     <head>
         <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap" rel="stylesheet">
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="meet_us.css" >
         <title>Girls Who Code</title>
     </head>
@@ -22,7 +24,9 @@
         <p style ="text-align:center"><b>50%</b> of the girls come from historically underrepresented groups in tech</p>
         <br />
     <h2 style="text-align:center">Mission Statement</h2>
-    <p style="text-align:center">Our mission is to get more girls into the tech industry through learning more about coding, while having fun!</p>
+    <p style="text-align:center">Our mission is to get more girls into the tech industry by providing resources for the girls to help them achieve their goals.</p> 
+    <p style="text-align:center">We create a sisterhood based on trust, respect, creativity, and support.</p>
+    <p style="text-align:center"> We work together on projects to learn more about coding while having fun!  </p>
     <br />
     <h1 style = "text-align: center">The Girls - Class of 2020</h1>
     <div class="row">
@@ -53,6 +57,19 @@
           </div>
       </div>
 
+
+      <br>
+
+      <footer class="footer" >
+        <br /><br /><h3 style="text-align:center">Check out our social media</h3>
+        <a href="mailto:gwcotterbein@gmail.com">Send Email</a>
+        <a href="https://www.facebook.com/GirlsWhoCode" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/girlswhocode" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/girlswhocode/" class="fa fa-instagram"></a>
+        <a href="https://www.youtube.com/user/GirlsWhoCode" class="fa fa-youtube"></a>
+        <a href="https://www.linkedin.com/school/girlswhocode/" class="fa fa-linkedin"></a>
+     
+    </footer>
 
     
     </body>
