--- a/GWC Website/projects.html
+++ b/GWC Website/projects.html
@@ -26,8 +26,8 @@
                     <img src="images/photo8.jpeg" alt="img8"/>
                     <figcaption>
                         <div>
-                            <h2><span>Arduino Holiday Light Show</span></h2>
-                            <p> By using the small Arduino robots and LED lights, we created a holiday light show!</p>
+                            <h2><span>Arduino Holiday <br/>Light Show</span></h2>
+                            <p> By using the small Arduino robots <br/>and LED lights, we created a <br/>holiday light show!</p>
                         </div>
                     </figcaption>			
                 </figure>
@@ -38,8 +38,16 @@
                             <h2>Nice <span>Lily</span></h2>
                             <p>Lily likes to play with crayons and pencils</p>
                         </div>
-                        <a href="#">View more</a>
                     </figcaption>			
+                </figure>
+                <figure class="effect-lily">
+                    <img src="images/photo8.jpeg" alt="img8"/>
+                    <figcaption>
+                        <div>
+                            <h2><span>Arduino Holiday <br/>Light Show</span></h2>
+                            <p> By using the small Arduino robots <br/>and LED lights, we created a <br/>holiday light show!</p>
+                        </div>
+                    </figcaption>           
                 </figure>
             </div>
         </div>
