Removed older main page
Cleaned up some unused files, added notes to css changes

--- a/GWC_Website/faq_page.html
+++ b/GWC_Website/faq_page.html
@@ -7,7 +7,7 @@
     </head>
 
     <div class="bubble_menu">
-        <button class="button" onclick="document.location='main.html'">Home</button>
+        <button class="button" onclick="document.location='main_scroll.html'">Home</button>
         <button class="button" onclick="document.location='MeetUs.html'">About Us</button>
         <button class="button" onclick="document.location='projects.html'">Projects</button>
         <button class="button" onclick="document.location='faq_page.html'">FAQ</button>
