--- a/GWC_Website/MeetUs.html
+++ b/GWC_Website/MeetUs.html
@@ -11,7 +11,7 @@
 
     <body>
       <div class="bubble_menu">
-        <button class="button" onclick="document.location='main.html'">Home</button>
+        <button class="button" onclick="document.location='main_scroll.html'">Home</button>
         <button class="button" onclick="document.location='MeetUs.html'">About Us</button>
         <button class="button" onclick="document.location='projects.html'">Projects</button>
         <button class="button" onclick="document.location='faq_page.html'">FAQ</button>
