Resolved merge conflicts
Pulled in Natalie's changes to projects page. Note, with these changes our background has changed and there is a project that now repeats itself. We should take a look and discuss.

--- a/GWC_Website/projects.html
+++ b/GWC_Website/projects.html
@@ -26,10 +26,10 @@
                     <img src="images/photo8.jpeg" alt="img8"/>
                     <figcaption>
                         <div>
-                            <h2><span>Arduino Holiday Light Show</span></h2>
-                            <p> By using the small Arduino robots and LED lights, we created a holiday light show!</p>
+                            <h2><span>Arduino Holiday <br/>Light Show</span></h2>
+                            <p> By using the small Arduino robots <br/>and LED lights, we created a <br/>holiday light show!</p>
                         </div>
-                    </figcaption>			
+                    </figcaption>           
                 </figure>
                 <figure class="effect-lily">
                     <img src="https://static.pexels.com/photos/3658/street-car-power-fast-large.jpg" alt="img1"/>
@@ -38,8 +38,16 @@
                             <h2>Nice <span>Lily</span></h2>
                             <p>Lily likes to play with crayons and pencils</p>
                         </div>
-                        <a href="#">View more</a>
-                    </figcaption>			
+                    </figcaption>           
+                </figure>
+                <figure class="effect-lily">
+                    <img src="images/photo8.jpeg" alt="img8"/>
+                    <figcaption>
+                        <div>
+                            <h2><span>Arduino Holiday <br/>Light Show</span></h2>
+                            <p> By using the small Arduino robots <br/>and LED lights, we created a <br/>holiday light show!</p>
+                        </div>
+                    </figcaption>           
                 </figure>
             </div>
         </div>
